--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   go_router: ^14.1.3
   intl: ^0.18.1
   postgres: ^3.2.1
+  syncfusion_flutter_charts: ^25.2.6
   system_theme: ^2.3.1
   url_launcher: ^6.2.6
   window_manager: ^0.3.9
