--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,9 +20,11 @@ dependencies:
   get_it: ^7.6.7
   go_router: ^14.1.3
   intl: ^0.18.1
+  photo_view: ^0.15.0
   postgres: ^3.2.1
   syncfusion_flutter_charts: ^25.2.6
   system_theme: ^2.3.1
+  textfield_datepicker: ^0.2.0
   url_launcher: ^6.2.6
   window_manager: ^0.3.9
 
